# nuwa_hal_realtek

./: CMakeLists.txt
ameba/: CMakeLists.txt  Kconfig
ameba/amebaG2/: CMakeLists.txt  Kconfig
ameba/amebaG2/include/: platform_autoconf.h
ameba/amebaG2/source/fwlib/include/: ameba_gpio.h  ameba_rcc.h
ameba/amebaG2/source/fwlib/jpeg_decoder/: CMakeLists.txt
ameba/amebaG2/source/fwlib/ram_common/: ameba_pmu.c  ameba_sdio_device.c
ameba/amebad/: CMakeLists.txt
ameba/amebad/include/: platform_autoconf.h
ameba/amebad/source/app/touch_key/: touch_key.c
ameba/amebad/source/cmsis-dsp/rom/: ameba_faac_tables.c
ameba/amebad/source/fwlib/crypto/: ameba_aes_ram.c  ameba_aes_rom.c  ameba_chacha_poly1305.c  ameba_crypto_ram.c  ameba_des_ram.c  ameba_des_rom.c  ameba_md5.c  ameba_sha.c
ameba/amebad/source/misc/: ameba_freertos_pmu.c  ameba_ota.c  ameba_pmu.h
ameba/amebad/source/swlib/: diag.c  local.h  log.c  memchr.c  memcpy.c  memmove.c  memset.c  printf.h  sscanf.c  va_list.h
ameba/amebad/source/usrcfg/: ameba_boot_trustzonecfg.c  ameba_bootcfg.c  ameba_flashcfg.c  ameba_intfcfg.c  ameba_ipccfg.c  ameba_pinmapcfg.c  ameba_pinmapcfg_qfn88_evb_v1.c  ameba_sleepcfg.c  ameba_sleepcfg_lib.c  ameba_wifi_power_table_usrcfg.c  ameba_wifi_power_table_usrcfg_1v8.c  ameba_wificfg.c
ameba/amebadplus/: CMakeLists.txt
ameba/amebadplus/include/: platform_autoconf.h
ameba/amebadplus/source/misc/: ameba_pmu.c
ameba/amebag2/: CMakeLists.txt
ameba/amebapro2/: CMakeLists.txt
ameba/amebapro2/include/: ameba.h  platform_autoconf.h
ameba/common/: CMakeLists.txt
ameba/common/bluetooth/: CMakeLists.txt  Kconfig
ameba/common/bluetooth/osif/: osif.c
ameba/common/bluetooth/rtk_coex/: rtk_coex.c  rtk_coex.h
ameba/common/os_wrapper/include/: dlist.h  os_wrapper.h  os_wrapper_memory.h  os_wrapper_task.h  os_wrapper_time.h
ameba/common/os_wrapper/source/: CMakeLists.txt  os_wrapper_critical.c  os_wrapper_memory.c  os_wrapper_mutex.c  os_wrapper_queue.c  os_wrapper_semaphore.c  os_wrapper_task.c  os_wrapper_time.c  os_wrapper_timer.c
ameba/common/rtk_coex/: CMakeLists.txt  Kconfig
ameba/common/usb/: CMakeLists.txt  Kconfig
ameba/common/video/include/: sensor.h  video_api.h  video_boot.h
ameba/common/video/source/: CMakeLists.txt  iq_gc2053_array.c  sensor_gc2053_array.c  video_api.c
ameba/common/wifi/: CMakeLists.txt  Kconfig
ameba/common/wifi/source/: ameba_wificfg.c  ameba_wificfg_dp.c  autoconf_8721d.h  autoconf_8721da.h  rtw_autoconf.h  rtw_inic_common.h  rtw_wakelock_zephyr.c  rtw_wifi_common.h  rtw_wifi_defs.h  wifi_feature_dis_antdiv.c  wifi_init_zephyr.c  wifi_intf_drv_to_app_basic.h  wifi_intf_drv_to_bt.h
ameba/scripts/: axf2bin.py  flash.py  merge_bin.py  toolchain_check.cmake  toolchain_check.py  toolchain_db.json  update_blobs.py
ameba/scripts/image_process/: manifest_manager.py  utility.py
ameba/usrcfg/amebad/: ameba_ipccfg.c
ameba/usrcfg/amebad/include/: ameba_usrcfg.h
ameba/usrcfg/amebag2/: CMakeLists.txt
ameba/usrcfg/amebag2/include/: ameba_boot_trustzonecfg.h  ameba_flashcfg.h  ameba_intfcfg.h  ameba_pinmapcfg.h  ameba_sleepcfg.h  ameba_usrcfg.h
west/: tools.py  west-commands.yml
zephyr/: module.yml
(+373 files in other folders)
